<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="87">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                style="@style/formLinearLayoutContainer">
                <TextView
                    android:id="@+id/schemeLabel"
                    style="@style/formLabel"
                    android:text="@string/scheme_label"/>
                <Spinner
                    android:id="@+id/schemeSpinner"
                    android:spinnerMode="dropdown"
                    style="@style/formInput"
                    android:inputType="textAutoComplete"/>
            </LinearLayout>
            <LinearLayout
                style="@style/formLinearLayoutContainer">
                <TextView
                    android:id="@+id/addressLabel"
                    style="@style/formLabel"
                    android:text="@string/address_label"/>
                <EditText
                    android:id="@+id/addressInput"
                    style="@style/formInput"
                    android:hint="@string/address_hint"/>
            </LinearLayout>
            <LinearLayout
                style="@style/formLinearLayoutContainer">
                <TextView
                    android:id="@+id/portLabel"
                    style="@style/formLabel"
                    android:text="@string/port_label"/>
                <EditText
                    android:id="@+id/portInput"
                    style="@style/formInput"
                    android:inputType="number"
                    android:hint="@string/port_hint"/>
            </LinearLayout>
            <LinearLayout
                style="@style/formLinearLayoutContainer">
                <TextView
                    android:id="@+id/restApiSubPathLabel"
                    style="@style/formLabel"
                    android:text="@string/rest_api_sub_path_label"/>
                <EditText
                    android:id="@+id/restApiSubPathInput"
                    style="@style/formInput"/>
            </LinearLayout>
            <LinearLayout
                style="@style/formLinearLayoutContainer">
                <TextView
                    android:id="@+id/recognizePath"
                    style="@style/formLabel"
                    android:text="@string/recognize_path_label"/>
                <EditText
                    android:id="@+id/recognizeInput"
                    style="@style/formInput"/>
            </LinearLayout>
            <LinearLayout
                style="@style/formLinearLayoutContainer">
                <TextView
                    android:id="@+id/createPath"
                    style="@style/formLabel"
                    android:text="@string/create_path_label"/>
                <EditText
                    android:id="@+id/createInput"
                    style="@style/formInput"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        style="@style/actionFooter"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:weightSum="100">
        <Button
            android:id="@+id/cancelBtn"
            style="@style/actionFooterButton"
            android:onClick="cancel"
            android:text="@string/cancel"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="10"/>
        <Button
            android:id="@+id/saveBtn"
            style="@style/actionFooterButton"
            android:onClick="save"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>