<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/subBgColor"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:background="@color/mainBgColor">
        <ImageView
            android:id="@+id/profilePicShow"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="48">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/firstNameShow"
                style="@style/textViewPersonData"
                android:text="@string/show_first_name_label"/>
            <TextView
                android:id="@+id/lastNameShow"
                style="@style/textViewPersonData"
                android:text="@string/show_last_name_label"/>
            <TextView
                android:id="@+id/ageShow"
                style="@style/textViewPersonData"
                android:text="@string/show_age_label"/>
            <TextView
                android:id="@+id/emailShow"
                style="@style/textViewPersonData"
                android:text="@string/show_email_label"/>
            <TextView
                android:id="@+id/faceEncodingShow"
                style="@style/textViewPersonData"
                android:text="@string/show_face_encoding_label"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/showFooter"
            style="@style/personActivityActionFooter"
            android:orientation="horizontal"
            android:weightSum="100">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionFooter"
            style="@style/personActivityActionFooter"
            android:visibility="visible"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/cancelBtn"
                style="@style/actionFooterButton"
                android:onClick="cancel"
                android:text="@string/cancel"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="10"/>
            <Button
                android:id="@+id/saveBtn"
                style="@style/actionFooterButton"
                android:onClick="insert"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>