<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="87">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                style="@style/formLinearLayoutContainer">
                <TextView
                    android:id="@+id/firstNameLabel"
                    style="@style/formLabel"
                    android:text="@string/first_name_label"/>
                <EditText
                    android:id="@+id/firstNameInput"
                    style="@style/formInput"/>
            </LinearLayout>
            <LinearLayout
                style="@style/formLinearLayoutContainer">
                <TextView
                    android:id="@+id/lastNameLabel"
                    style="@style/formLabel"
                    android:text="@string/last_name_label"/>
                <EditText
                    android:id="@+id/lastNameInput"
                    style="@style/formInput"/>
            </LinearLayout>
            <LinearLayout
                style="@style/formLinearLayoutContainer">
                <TextView
                    android:id="@+id/ageLabel"
                    style="@style/formLabel"
                    android:text="@string/age_label"/>
                <EditText
                    android:id="@+id/ageInput"
                    style="@style/formInput"
                    android:inputType="number"/>
            </LinearLayout>
            <LinearLayout
                style="@style/formLinearLayoutContainer">
                <TextView
                    android:id="@+id/emailLabel"
                    style="@style/formLabel"
                    android:text="@string/email_label"/>
                <EditText
                    android:id="@+id/emailInput"
                    style="@style/formInput"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        style="@style/actionFooter"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:weightSum="100">
        <Button
            android:id="@+id/cancelBtn"
            style="@style/actionFooterButton"
            android:onClick="cancel"
            android:text="@string/cancel"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="10"/>
        <Button
            android:id="@+id/saveBtn"
            style="@style/actionFooterButton"
            android:onClick="save"
            android:text="@string/save"/>
    </LinearLayout>

</LinearLayout>