<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    android:background="@color/mainBgColor"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="20sp"
        android:textColor="#E3F2FD"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <ImageButton
        android:id="@+id/recognizeBtn"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/take_picture_button"
        android:onClick="faceRecognition"
        android:scaleType="centerCrop"
        android:soundEffectsEnabled="true"/>

    <View
        style="@style/lineSeparator"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_weight="1">

                <Button
                    android:id="@+id/addButton"
                    style="@style/mainActivityButtonLeft"
                    android:onClick="addUser"
                    android:text="@string/add_btn"/>
                <Button
                    android:id="@+id/peopleButton"
                    style="@style/mainActivityButtonLeft"
                    android:text="@string/people_btn"
                    android:onClick="people"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <Button
                    android:id="@+id/galleryButton"
                    style="@style/mainActivityButtonRight"
                    android:text="@string/gallery_btn"
                    android:onClick="gallery"/>
                <Button
                    android:id="@+id/aboutButton"
                    style="@style/mainActivityButtonRight"
                    android:onClick="aboutUs"
                    android:text="@string/about_btn"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>