<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_capture_image"
    android:background="#536DFE"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/takePictureFromCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:background="#8C9EFF"
            android:textColor="#E3F2FD"
            android:textAllCaps="true"
            android:onClick="takePicture"
            android:text="@string/take_photo"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="386dp"
        android:layout_weight="1.04">
        <ImageView
            android:id="@+id/imageFromCamera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.42" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:weightSum="1.0">

        <Button
            android:id="@+id/cancelSendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="0.48"
            android:background="#8C9EFF"
            android:textColor="#E3F2FD"
            android:textAllCaps="true"
            android:onClick="cancelSend"
            android:text="@string/cancel"
            android:visibility="invisible"/>

        <!-- Spacer View -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.04"
            />

        <Button
            android:id="@+id/sendPictureBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="0.48"
            android:background="#8C9EFF"
            android:onClick="sendPicture"
            android:text="@string/send_photo"
            android:textAllCaps="true"
            android:textColor="#E3F2FD"
            android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>